--- a/doc/contributing.mdwn
+++ b/doc/contributing.mdwn
@@ -124,7 +124,7 @@ Some guidelines for patches:
   its solution, or a reason for the change. Write more information,
   not less, in the commit log.
 
-Maintainers should not merge their own patches if they haven't been
+Maintainers should merge their own patches only when they have been
 approved by other maintainers, unless there is no response within a
 reasonable timeframe (roughly one week).
 
