--- a/doc/contributing.mdwn
+++ b/doc/contributing.mdwn
@@ -123,15 +123,15 @@ Some guidelines for patches:
   blank line and then a description of the problem being solved and
   its solution, or a reason for the change. Write more information,
   not less, in the commit log.
-* Patches should be reviewed by at least one member before being merged.
+* Patches should be reviewed by at least one maintainer before being merged.
 
-Maintainers should merge their own patches only when they have been
+Project maintainers should merge their own patches only when they have been
 approved by other maintainers, unless there is no response within a
 reasonable timeframe (roughly one week) or there is an urgent change
 to be done (e.g. security or data loss issue).
 
 As an exception to this rule, this specific document cannot be changed
-without the consensus of all owners of the project.
+without the consensus of all administrators of the project.
 
 > Note: Those guidelines were inspired by the
 > [Collective Code Construct Contract][C4]. The document was found to
@@ -175,32 +175,33 @@ Issue triage is a useful contribution as well. You can review the
 [issues]: https://github.com/linkcheck/linkchecker/issues
 
 Note that some of those operations are available only to project
-members, see below for the different statuses.
+maintainers, see below for the different statuses.
 
 # Membership
 
-There are three levels of membership in GitHub organizations, Owner,
-Member, or regular users (everyone with or without a GitHub
-account). Anyone is welcome to contribute to the project within the
-guidelines outlined in this document, regardless of their status, and
-that includes regular users.
+There are three levels of membership in the project, Administrator
+(also known as "Owner" in GitHub), Maintainer (also known as "Member")
+, or regular users (everyone with or without a GitHub account). Anyone
+is welcome to contribute to the project within the guidelines outlined
+in this document, regardless of their status, and that includes
+regular users.
 
-Members can:
+Maintainers can:
 
 * do everything regular users can
 * review, push and merge pull requests
 * edit and close issues
 
-Owners can:
+Administrators can:
 
-* do everything members can
-* add new members
-* promote members to owners
+* do everything maintainers can
+* add new maintainers
+* promote maintainers to administrators
 
-Regular users can be promoted to members if they contribute to the
+Regular users can be promoted to maintainers if they contribute to the
 project, either by participating in issues, documentation or pull
 requests.
 
-Members can be promoted to owners when they have given significant
+Maintainers can be promoted to administrators when they have given significant
 contributions for a sustained timeframe, by consensus of the current
-owners. This process should be open and decided as any other issue.
+administrators. This process should be open and decided as any other issue.
