Remove reference to non existent .dmg file
Pending a resolution to https://github.com/linkcheck/linkchecker/issues/60 

(re-rolling this PR here https://github.com/wummel/linkchecker/pull/640 )

--- a/doc/install.txt
+++ b/doc/install.txt
@@ -23,9 +23,9 @@ Execute ``LinkChecker-x.y.exe`` and follow the instructions.
 
 Setup for Mac OS X
 ------------------
-Double click ``LinkChecker-x.y.dmg`` and drop the LinkChecker application
-in your programs folder
-
+Nobody is currently offering a "dmg" download for Mac OS X in your programs folde 
+See https://github.com/linkcheck/linkchecker/issues/60
+...however the steps for compiling it from source are given below.
 
 Setup for GNU/Linux
 -------------------
