--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -3,6 +3,8 @@
 Features:
 - checking: Support itms-services: URLs.
   Closes: GH bug #532
+- checking: Support XDG Base Directory Specification for configuration
+  and data.
 
 Changes:
 - installation: Remove dependency on msgfmt.py by pre-generating the
