--- a/CONTRIBUTING.mdwn
+++ b/CONTRIBUTING.mdwn
@@ -1,5 +1,11 @@
-This document outlines how to contribute to this project. It details a
-code of conduct, how to submit issues, bug reports and patches.
+# Contribution guide
+
+This document outlines how to contribute to this project. It details
+instructions on how to submit issues, bug reports and patches.
+
+Before you participate in the community, you should also agree to
+respect the code of conduct, shipped in `CODE_OF_CONDUCT.md` in the
+source code.
 
 # Patches
 
