Update references to GitHub project from wummel to linkchecker
Remove all mention of donations.

--- a/doc/install.txt
+++ b/doc/install.txt
@@ -24,7 +24,7 @@ Execute ``LinkChecker-x.y.exe`` and follow the instructions.
 Setup for Mac OS X
 ------------------
 Nobody is currently offering a "dmg" download for Mac OS X in your programs folder
-See https://github.com/linkcheck/linkchecker/issues/60
+See https://github.com/linkchecker/linkchecker/issues/60
 ...however the steps for compiling it from source are given below.
 
 Setup for GNU/Linux
@@ -135,7 +135,7 @@ Manual setup for OSX systems
    Now install py2app:
    $ sudo easy_install -U py2app
 
-5. git clone git@github.com:wummel/linkchecker.git linkchecker
+5. git clone git@github.com:linkchecker/linkchecker.git linkchecker
 
 6. cd linkchecker
 
