Add link to unknownurl.py in man page

--- a/doc/en/linkchecker.1
+++ b/doc/en/linkchecker.1
@@ -383,7 +383,11 @@ An unsupported link will only print a warning. No further checking
 will be made.
 .IP
 The complete list of recognized, but unsupported links can be found
-in the \fBlinkcheck/checker/unknownurl.py\fP source file.
+in the
+.UR https://github.com/linkchecker/linkchecker/blob/master/linkcheck/checker/unknownurl.py
+linkcheck/checker/unknownurl.py
+.UE
+source file.
 The most prominent of them should be JavaScript links.
 .SH PLUGINS
 There are two plugin types: connection and content plugins.
