--- a/doc/en/linkchecker.1
+++ b/doc/en/linkchecker.1
@@ -361,24 +361,24 @@ For FTP links we do:
 1) connect to the specified host
 .br
 2) try to login with the given user and password. The default
-user is ``anonymous``, the default password is ``anonymous@``.
+user is \fBanonymous\fP, the default password is \fBanonymous@\fP.
 .br
 3) try to change to the given directory
 .br
 4) list the file with the NLST command
 
 .TP
-Telnet links (``telnet:``)
+Telnet links (\fBtelnet:\fP)
 We try to connect and if user/password are given, login to the
 given telnet server.
 
 .TP
-NNTP links (``news:``, ``snews:``, ``nntp``)
+NNTP links (\fBnews:\fP, \fBsnews:\fP, \fBnntp\fP)
 We try to connect to the given NNTP server. If a news group or
 article is specified, try to request it from the server.
 
 .TP
-Unsupported links (``javascript:``, etc.)
+Unsupported links (\fBjavascript:\fP, etc.)
 An unsupported link will only print a warning. No further checking
 will be made.
 .IP
