--- a/doc/en/linkchecker.1
+++ b/doc/en/linkchecker.1
@@ -85,7 +85,7 @@ Print available check plugins and exit.
 \fB\-D\fP\fISTRING\fP, \fB\-\-debug=\fP\fISTRING\fP
 Print debugging output for the given logger.
 Available loggers are \fBcmdline\fP, \fBchecking\fP,
-\fBcache\fP, \fBdns\fP, \fBplugins\fP and \fBall\fP.
+\fBcache\fP, \fBdns\fP, \fBplugin\fP and \fBall\fP.
 Specifying \fBall\fP is an alias for specifying all available loggers.
 The option can be given multiple times to debug with more
 than one logger.
