--- a/doc/install.txt
+++ b/doc/install.txt
@@ -16,14 +16,14 @@ You can also use pip to install the latest from git: ``sudo pip3 install git+htt
 
 Setup for Windows
 -----------------
-Nobody is currently offering an "exe" download for Windows
-See https://github.com/linkchecker/linkchecker/issues/53
+Python from the Microsoft Store does include pip_, but installing
+within Windows Subsystem for Linux (WSL) is the preferred option:
+https://docs.microsoft.com/en-us/windows/python/beginners
 
 Setup for Mac OS X
 ------------------
-Nobody is currently offering a "dmg" download for Mac OS X in your programs folder
-See https://github.com/linkchecker/linkchecker/issues/60
-...however the steps for compiling it from source are given below.
+Obtain ``get-pip.py`` to install pip_ (untested):
+https://pip.pypa.io/en/stable/installing/
 
 Setup for GNU/Linux
 -------------------
