--- a/doc/install.txt
+++ b/doc/install.txt
@@ -10,9 +10,9 @@ the local system:
 
 .. _pip: https://pypi.org/project/pip/
 
-``sudo pip3 install LinkChecker``
+``pip3 install LinkChecker``
 
-You can also use pip to install the latest from git: ``sudo pip3 install git+https://github.com/linkchecker/linkchecker.git``.
+You can also use pip to install the latest from git: ``pip3 install git+https://github.com/linkchecker/linkchecker.git``.
 
 Setup for Windows
 -----------------
