--- a/doc/en/linkchecker.1
+++ b/doc/en/linkchecker.1
@@ -1,4 +1,4 @@
-.TH LINKCHECKER 1 2020-04-24 "LinkChecker" "LinkChecker User Manual"
+.TH LINKCHECKER 1 2020-06-05 "LinkChecker" "LinkChecker User Manual"
 .SH NAME
 linkchecker \- command line client to check HTML documents and websites for broken links
 .SH SYNOPSIS
@@ -298,7 +298,7 @@ To use a proxy on Unix or Windows set the $http_proxy, $https_proxy or $ftp_prox
 environment variables to the proxy URL. The URL should be of the form
 \fBhttp://\fP[\fIuser\fP\fB:\fP\fIpass\fP\fB@\fP]\fIhost\fP[\fB:\fP\fIport\fP].
 LinkChecker also detects manual proxy settings of Internet Explorer under
-Windows systems, and gconf or KDE on Linux systems.
+Windows systems, and GNOME or KDE on Linux systems.
 On a Mac use the Internet Config to select a proxy.
 .PP
 You can also set a comma-separated domain list in the $no_proxy environment
