--- a/doc/install.txt
+++ b/doc/install.txt
@@ -54,7 +54,8 @@ First, install the required software.
    ClamAv from https://www.clamav.net/
 
 7. *Optional, for GNOME proxy setting parsing:*
-    Python Gtk from http://www.pygtk.org/downloads.html
+    PyGObject and GIO.
+    Best installed from your distribution e.g. ``python3-gi``
 
 8. *Optional, to run the WSGI web interface:*
    Apache from https://httpd.apache.org/
