Copy date and add translation for GNOME/KDE to de.po

--- a/doc/de.po
+++ b/doc/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: linkchecker 3.4\n"
 "POT-Creation-Date: 2020-06-05 16:18+0100\n"
-"PO-Revision-Date: 2020-06-04 17:33+0100\n"
+"PO-Revision-Date: 2020-06-11 19:31+0100\n"
 "Last-Translator: Chris Mayo <aklhfex@gmail.com>\n"
 "Language-Team: German - Germany <>\n"
 "Language: de_DE\n"
@@ -26,10 +26,9 @@ msgstr "LINKCHECKER"
 
 #. type: TH
 #: en/linkchecker.1:1
-#, fuzzy, no-wrap
-#| msgid "2020-04-24"
+#, no-wrap
 msgid "2020-06-05"
-msgstr "2020-04-24"
+msgstr "2020-06-05"
 
 # type: TH
 #. type: TH
@@ -1117,14 +1116,6 @@ msgstr "PROXY UNTERSTÜTZUNG"
 # type: Plain text
 #. type: Plain text
 #: en/linkchecker.1:303
-#, fuzzy
-#| msgid ""
-#| "To use a proxy on Unix or Windows set the $http_proxy, $https_proxy or "
-#| "$ftp_proxy environment variables to the proxy URL. The URL should be of "
-#| "the form B<http://>[I<user>B<:>I<pass>B<@>]I<host>[B<:>I<port>].  "
-#| "LinkChecker also detects manual proxy settings of Internet Explorer under "
-#| "Windows systems, and gconf or KDE on Linux systems.  On a Mac use the "
-#| "Internet Config to select a proxy."
 msgid ""
 "To use a proxy on Unix or Windows set the $http_proxy, $https_proxy or "
 "$ftp_proxy environment variables to the proxy URL. The URL should be of the "
@@ -1137,8 +1128,8 @@ msgstr ""
 "$http_proxy, $https_proxy oder $ftp_proxy Umgebungsvariablen auf die Proxy "
 "URL. Die URL sollte die Form B<http://>[I<user>B<:>I<pass>B<@>]I<host>[B<:"
 ">I<port>] besitzen. LinkChecker erkennt auch die Proxy-Einstellungen des "
-"Internet Explorers auf einem Windows-System. Auf einem Mac benutzen Sie die "
-"Internet Konfiguration."
+"Internet Explorers auf einem Windows-System, und GNOME oder KDE auf Linux "
+"Systemen. Auf einem Mac benutzen Sie die Internet Konfiguration."
 
 #. type: Plain text
 #: en/linkchecker.1:306
