--- a/doc/de/linkchecker.1
+++ b/doc/de/linkchecker.1
@@ -298,12 +298,13 @@ Das untige Beispiel sendet zwei Cookies zu allen URLs die mit
   Set\-cookie: baggage="elitist"; comment="hologram"
 .EE
 .SH "PROXY UNTERSTÜTZUNG"
-To use a proxy on Unix or Windows set the $http_proxy, $https_proxy or
-$ftp_proxy environment variables to the proxy URL. The URL should be of the
-form \fBhttp://\fP[\fIuser\fP\fB:\fP\fIpass\fP\fB@\fP]\fIhost\fP[\fB:\fP\fIport\fP].  LinkChecker
-also detects manual proxy settings of Internet Explorer under Windows
-systems, and GNOME or KDE on Linux systems.  On a Mac use the Internet
-Config to select a proxy.
+Um einen Proxy unter Unix oder Windows zu benutzen, setzen Sie die
+$http_proxy, $https_proxy oder $ftp_proxy Umgebungsvariablen auf die Proxy
+URL. Die URL sollte die Form
+\fBhttp://\fP[\fIuser\fP\fB:\fP\fIpass\fP\fB@\fP]\fIhost\fP[\fB:\fP\fIport\fP] besitzen. LinkChecker
+erkennt auch die Proxy\-Einstellungen des Internet Explorers auf einem
+Windows\-System, und GNOME oder KDE auf Linux Systemen. Auf einem Mac
+benutzen Sie die Internet Konfiguration.
 .PP
 Sie können eine komma\-separierte Liste von Domainnamen in der $no_proxy
 Umgebungsvariable setzen, um alle Proxies für diese Domainnamen zu
