Document that HTTP POST is used for loginurl

--- a/doc/en/linkcheckerrc.5
+++ b/doc/en/linkcheckerrc.5
@@ -148,7 +148,7 @@ Command line option: \fB\-u\fP, \fB\-p\fP
 \fBloginurl=\fP\fIURL\fP
 The URL of a login page to be visited before link checking. The page is expected
 to contain an HTML form to collect credentials and submit them to the address in
-its action attribute.
+its action attribute using an HTTP POST request.
 The name attributes of the input elements of the form and the values to be
 submitted need to be available (see \fBentry\fP for an explanation of username
 and password values).
